# Distributed-Multi-View-Geometry-Reasoning-System-

./: .gitignore
src/geometry_interfaces/: CMakeLists.txt  package.xml
src/geometry_interfaces/msg/: CameraMotion.msg  DescriptorArray.msg  KeypointArray.msg
src/geometry_interfaces/srv/: CheckGeometry.srv
src/geometry_vision/: package.xml  setup.cfg  setup.py
src/geometry_vision/geometry_vision/: camera_node.py  decision_node.py  descriptor_node.py  filtering_node.py  geometry_node.py  keypoint_node.py  matching_node.py  motion_node.py
src/surveillance_interfaces/: CMakeLists.txt  package.xml
src/surveillance_interfaces/action/: ReportAction.action
src/surveillance_interfaces/msg/: GeometricInliers.msg  MatchArray.msg
